Fix for transparent navbar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3564,3 +3564,13 @@ cursor: pointer;
      display:block;
      text-align: center;
 }
+
+
+/* ------ Navbar mobile styles ------- */
+@media (max-width: 768px) {
+     .navbar-collapse.in, .navbar-collapse.collapsing {
+         overflow-y: auto;
+         text-align: center;
+         padding: 20px 0px;
+         background: #3169b3;
+}
